[tool.poetry]
name = "acheron"
version = "0.1.0"
description = "A torrent client"
authors = [
  "Nikolaos Kamarinakis <nikolaskam@gmail.com>"
]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
bencodepy = "^0.9.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
